[1.8.2-SNAPSHOT]
- API Addition: parallel task now supports different child execution strategies (orchestrators)
- API Addition: allow unsupported type parsing for task attributes

[1.8.1]
- Updated to libgdx 1.9.5
- Fix: division by zero in Separation behavior.
- Fix: in FollowFlowField behavior the predicted position was affecting steering.
- Fix: stackoverflow in Sequence with guarded Task.
- API Addition: ability to remove steering behaviors from BlendedSteering.
- API Addition: method to check the registration of an archetype tree.

[1.8.0]
- Updated to libgdx 1.9.1
- API Change and Addition: Pathfinding API
  * Added method getIndex to the interface IndexedGraph.
  * Removed classes DefaultIndexedGraph and IndexedNode.
- API Change and Addition: Behavior Tree API extended to make it easier to think and design in terms of states, see https://github.com/libgdx/gdx-ai/wiki/Behavior-Trees
  * Added ability to guard any task.
  * Added branch task DynamicGuardSelector.
  * Now the text format supports internal sub-trees that, besides improving reuse and readability, allow you to use composite guards. 
  * Now the parser is able to report comments, which can be useful for certain tools such as graphical editors.

[1.7.0]
- Updated to libgdx 1.7.1
- API Addition: added GdxAI service locator that reduces coupling with libgdx and allows you to use gdx-ai
  out of a libgdx application without having to initialize libgdx environment, so avoiding the waste of resources
  and the need of native libraries; see https://github.com/libgdx/gdx-ai/wiki/Initializing-and-Using-gdxAI
- API Change and Addition: Messaging API
  * Removed delta time argument from the update method of the MessageDispatcher; the new GdxAI.getTimepiece().getTime() is internally used instead.
  * Added return receipt support, see https://github.com/libgdx/gdx-ai/wiki/Message-Handling#return-receipt
  * The report method of PendingMessageCallback now takes an additional argument for the return receipt.