@@ -108,8 +108,8 @@ public abstract class SingleRunningChildBranch<E> extends BranchTask<E> {
 	}
 
 	@Override
-	public void reset () {
-		super.reset();
+	public void resetTask () {
+		super.resetTask();
 		this.currentChildIndex = 0;
 		this.runningChild = null;
 		this.randomChildren = null;
@@ -128,6 +128,14 @@ public abstract class SingleRunningChildBranch<E> extends BranchTask<E> {
 		Task<E>[] rndChildren = new Task[children.size];
 		System.arraycopy(children.items, 0, rndChildren, 0, children.size);
 		return rndChildren;
+	}
+	
+	@Override
+	public void reset() {
+		this.currentChildIndex = 0;
+		this.runningChild = null;
+		this.randomChildren = null;
+		super.reset();
 	}
 
 }
