@@ -83,4 +83,12 @@ public class Wait<E> extends LeafTask<E> {
 		return task;
 	}
 
+	@Override
+	public void reset() {
+		seconds = ConstantFloatDistribution.ZERO;
+		startTime = 0;
+		timeout = 0;
+		super.reset();
+	}
+	
 }
