@@ -72,7 +72,7 @@ public abstract class BehaviorTreeTestBase {
 
 	public void dispose () {
 		for (BehaviorTreeViewer<?> treeViewer : treeViewers)
-			treeViewer.getBehaviorTree().reset();
+			treeViewer.getBehaviorTree().resetTask();
 		treeViewers.clear();
 	}
 }
